<resources>
    <string name="app_name">E-Salansan</string>
    <string name="usernamehint">Enter Username</string>
    <string name="passwordHint">Enter Password</string>
    <string name="btnLogInText">Log-in</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="signUpText">New here? Sign up!</string>
    <string name="last_name_signup">Last Name</string>
    <string name="first_name_signup">First Name</string>
    <string name="username_signup">Username</string>
    <string name="e_mail_address_signup">E-mail Address</string>
    <string name="password_signup">Password</string>
    <string name="re_type_password_signup">Re-type Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_signup">Already have an account? Log in!</string>
    <string name="rdb_male">Male</string>
    <string name="rdb_female">Female</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="forgot_password2">Enter your e-mail address and we\'ll send you your password.</string>
    <string name="btnSubmit">Submit</string>
    <string name="back_to_login"><![CDATA[< Back to Login]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title">E-Salansan</string>
    <string name="label_intro">Learning Guide for Data Structure</string>
    <string name="label_intro1">Learn the basics of Data Structure at your own pace</string>
    <string name="label_intro2"><![CDATA[Let\'s get started! >]]></string>
    <string name="lblName">What\'s your name?</string>
    <string name="txtName">Enter your name here</string>
    <string name="btnNextLabel">Next</string>
    <string name="previous_string">PREVIOUS</string>
    <string name="next_string">NEXT</string>
    <string name="page_number_chap1lec1">Page Number : 1/5</string>
    <string name="set_up_password_label">Secure your saved works by setting up your password!</string>
    <string name="password">Password</string>
    <string name="let_s_get_started_btn">Let\'s Get Started</string>
    <string name="retype_your_password">Retype your Password</string>
    <string name="hi">Hi!</string>
    <string name="lbl_mainmenu">Learn Data Structures anytime, anywhere</string>
    <string name="page_number_c1l2">Page Number: 1/2</string>
    <string name="question_lbl_challenge1">Question 1/20</string>
    <string name="btn_submit_challenge_1">Button</string>
    <string name="score_lbl">Score: 0</string>
    <string name="lbl_timer">30:00</string>
    <string name="result_lbl">Result</string>
    <string name="image_content_description">image</string>
    <string name="congrats_lbl">Hey, Congratulations!</string>
    <string name="finish_lbl">FINISH</string>
    <string name="chapters_lbl">Chapters</string>
    <string name="name_lbl">Name</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="switch_account">Switch Account</string>
    <string name="simulate_btn_txt">Simulate</string>
    <string name="add_lecture_here">Add lecture here...</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="new_lesson">New Lesson</string>
    <string name="new_chapter">New Chapter</string>
    <string name="add_lecture">ADD LECTURE</string>
    <string name="add_question_here">Add question here...</string>
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">Option 3</string>
    <string name="option_four">Option 4</string>
    <string name="rdb_option_one">1</string>
    <string name="rdb_option_two">2</string>
    <string name="rdb_option_three">3</string>
    <string name="rdb_option_four">4</string>
    <string name="choose_the_correct_answer">Choose the correct answer:</string>
    <string name="add_question">Add Question</string>
    <string name="update_lecture">Update Lecture</string>
    <string name="delete_lecture">Delete Lecture</string>
    <string name="chapter_challenge_question">Input what chapter the question belongs to..</string>
    <string name="lecture_list">Lecture List</string>
    <string name="questions_list">Questions List</string>
    <string name="delete_question">Delete Question</string>
    <string name="update_question">Update Question</string>
    <string name="peek_string">Peek</string>
    <string name="front_element_string">Front element:</string>
    <string name="dequeue_string">Dequeue</string>
    <string name="enqueue_string">Enqueue</string>
    <string name="push_string">Push</string>
    <string name="pop_string">Pop</string>
    <string name="top_element_string">Top element:</string>
    <string name="number_to_search_string">Number to search:</string>
    <string name="generate_random_numbers_string">Generate Random Numbers</string>
    <string name="generate_random_number_string">Generate Random Number</string>
</resources>