<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient1"
    tools:context=".admin.AddQuestionsActivity">

    <EditText
        android:id="@+id/et_chapter_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/chapter_challenge_question"
        android:autofillHints=""
        android:layout_margin="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etLectureAdd"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|start"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:hint="@string/add_question_here"
        android:autofillHints=""
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_option_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/option_one"
        android:autofillHints=""
        android:layout_margin="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_option_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/option_two"
        android:autofillHints=""
        android:layout_margin="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_option_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/option_three"
        android:autofillHints=""
        android:layout_margin="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_option_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/option_four"
        android:autofillHints=""
        android:layout_margin="5dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_correct_answer"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rdbOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rdb_option_one"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdbOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rdb_option_two"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdbOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rdb_option_three"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdbOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rdb_option_four"
            android:textColor="@color/white"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnAddQuestionToDB"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_question"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>




</LinearLayout>