<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/gradient1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btn_login_switch_acct"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/esalansan24"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/image_content_description"/>

    <EditText
        android:id="@+id/etUsernameLogIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/usernamehint"
        android:inputType="textPersonName"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/etPasswordLogIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:autofillHints=""
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogInText"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText" />

</LinearLayout>