<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient1"
    tools:context=".admin.AddLectureActivity">

    <EditText
        android:id="@+id/chapter_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chapter_title"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/cboNewChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_chapter"
        android:layout_gravity="start"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/lessonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lesson_title"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/cboNewLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_lesson"
        android:layout_gravity="start"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etLectureAdd"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|start"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:hint="@string/add_lecture_here"
        android:autofillHints=""
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnAddLectureToDB"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_lecture"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>