<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".SetUpPasswordActivity">

    <TextView
        android:id="@+id/lblSetUpPassword"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="35dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_up_password_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etPasswordOL"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etRetypePasswordOL"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/retype_your_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnStartTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/let_s_get_started_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>