<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hi"
            android:textSize="25sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/image_content_description"
            app:srcCompat="@drawable/ic_profile"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/app_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/banner"
        android:contentDescription="@string/image_content_description"
        android:background="#4bd8ea"/>


    <TextView
        android:id="@+id/lblAnytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_mainmenu"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblChapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapters_lbl"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChapters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" />

</LinearLayout>